# prevu

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
cli/: Cargo.toml  prevu-cli.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: main.tsx
frontend/src/components/: BatchInspector.tsx  ClipboardWatcherIndicator.tsx  ComparePanel.tsx  ImageInspector.tsx  MetaTable.tsx  PreviewCard.tsx  UrlInput.tsx  ValidationPanel.tsx  WatchModeToggle.tsx  WorkspacePanel.tsx
frontend/src/pages/: Home.tsx
frontend/src/styles/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_watcher.rs  image_checker.rs  lib.rs  main.rs  parser.rs  validator.rs
