[package]
name = "prevu-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prevu"
path = "prevu-cli.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
prevu_core = { package = "prevu", path = "../src-tauri" }
